@@ -1,3 +1,9 @@
+2008-09-02  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_style.c (murrine_style_draw_box):
+	Added Clearlooks ability to draw better menuitem separators using
+	style properties. Read from Clearlooks gtkrc for more info
+
 2008-09-01  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_rc_style.c (murrine_rc_style_register_types),
